# acadocs

./: .flake8  .gitignore  404.html  README.md  about.html  index.html  mkdocs.yml  mypy.ini  pyproject.toml  sitemap.xml  workflow_stadsarkiv.md
.github/workflows/: build.yml  deploy.yml  test.yml
acadocs/: mkdocs.yml
acquisition/: acquiring-analog-material.html  acquiring-digital-material.html  index.html
acquisition/acquiring-analog-material/: index.html
acquisition/acquiring-digital-material/: index.html
archival-versions/: ada.html  index.html  master-formats.html  notes-arkivering.html
archival-versions/ada/: index.html
archival-versions/master-formats/: index.html
archival-versions/notes-arkivering/: index.html
development/: github.html  index.html  pyinstaller.html
development/convertool_workflow/: index.html
development/docker/: index.html
development/git/: index.html
development/git_workflow/: index.html
development/github/: index.html
development/github_actions/: index.html
development/roadmap/: index.html
digitization/: index.html
dissemination/: index.html
diverse/: archiving_practices.html  database_tables.html  framework.html  index.html
docs/: about.md  index.md
documents/: index.html
files/: Konverteringsfejl.odt
overrides/: procedure.html
preservation/: index.html
registration/: index.html
search/: search_index.json
selection/: index.html
sites/: aarhusarkivet.html  aarhuswiki.html
software/: chocolatey.html  convertool.html  digiarch.html  filezilla.html  ghostscript.html  index.html  libreoffice.html  symphovert.html  tiffany.html
tools/: index.html
(+128 files in other folders)
