[tool.poetry]
authors = ["Claus Juhl Knudsen <cjk@aarhus.dk>"]
description = ""
homepage = "https://www.aarhusstadsarkiv.dk/"
license = "GPL-3.0"
maintainers = ["Aarhus Stadsarkiv <stadsarkiv@aarhus.dk>"]
name = "acadocs"
readme = "README.md"
version = "0.1.1"

[tool.poetry.dependencies]
mkdocs = "^1.5.3"
mkdocs-macros-plugin = "^0.5.5"
mkdocs-material = "^7.1.2"
python = "^3.8"

[tool.black]
exclude = ".venv"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
